--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "next": "latest",
+    "polished": "^3.6.5",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.8.0"
+    "@types/node": "^14.0.20",
+    "@types/react": "^16.9.41",
+    "babel-plugin-styled-components": "^1.8.0",
+    "typescript": "^3.9.6"
   },
   "license": "ISC"
 }
