--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "polished": "^3.6.5",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-icons": "^3.10.0",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
