--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/styled-components": "^5.1.1",
     "axios": "^0.19.2",
     "next": "latest",
+    "next-page-transitions": "^1.0.0-beta.2",
     "polished": "^3.6.5",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
